
[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "mapper_c_utils"
version = "1.0.0"
description = "Mapper C utilities"
authors = [
    { name = "Diamond Light Source", email = "philip.mousley@diamond.ac.uk" }
]
dependencies = ["numpy"]
readme="readme.md"
